<resources>
    <string name="app_name">IntentsApp</string>
    <string name="Password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="website">http://www.myntra.com</string>
    <string name="call">Call</string>
    <string name="mail">Mail</string>
    <string name="shop">Shop</string>
    <string name="location">Location</string>
    <string name="attempts_left">Attempts left:</string>
</resources>